Version 3.3.1 is source and binary compatible with 3.3.

New Features in 3.3.1:
====================
* JEXL-408:     Using JexlFeatures is tedious
* JEXL-404:     Support array-access safe navigation (x?[y])
* JEXL-401:     Captured variables should be read-only
* JEXL-398:     Allow 'trailing commas' or ellipsis while defining array, map and set literals

Bugs Fixed in 3.3.1:
===================
* JEXL-410:     JexlFeatures: ctor does not enable all features
* JEXL-409:     Disable LEXICAL should disable LEXICAL_SHADE
* JEXL-405:     Recursive functions corrupt evaluation frame if reassigned
* JEXL-403:     Exception while evaluating template literal used in array assignment in loop.
* JEXL-402:     parse failed with empty return value.

========================================================================================================================
Release 3.3
========================================================================================================================

Version 3.3 is a minor release.

Compatibility with previous releases
====================================
Version 3.3 is source and binary compatible with 3.2.
However, the default setting for permissions that determine which packages, classes and methods are accessible
to scripts has been reduced to a very narrow set. When migrating from previous version of JEXL, this may result
in breaking your application behavior ; this breaking change requires remediation in your code.
Despite the obvious inconvenience - our sincere apologies on the matter -, how much functional and semantic power is
accessible through scripts has a real impact on your application security and stability ; that potential risk requires
an informed review and conscious choice on your end.
To mitigate the change, you can revert to the previous behavior with one line of code  (see JexlPermissions, JexlBuilder